--- a/Application.Api/Application.Api.csproj
+++ b/Application.Api/Application.Api.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
     <Version>0.2.1</Version>
+    <AssemblyVersion>0.2.2.7632</AssemblyVersion>
+    <FileVersion>0.2.2.7632</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
